--- a/static_app/jenkinsfile
+++ b/static_app/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
             steps {
                 echo 'Building the Docker image...'
                 script {
-                    sh 'C:/Program Files/Git/usr/bin/bash.exe -c "docker build -t $DOCKER_IMAGE ."'
+                    sh 'docker build -t $DOCKER_IMAGE .'
 
                 }
             }
@@ -33,7 +33,7 @@ pipeline {
             steps {
                 echo 'Deploying the application...'
                 script {
-                    sh 'C:/Program Files/Git/usr/bin/bash.exe -c "docker run -d -p 80:80 $DOCKER_IMAGE"'
+                    sh 'docker run -d -p 80:80 $DOCKER_IMAGE'
 
                 }
             }
@@ -43,7 +43,7 @@ pipeline {
     post {
         always {
             echo 'Cleaning up...'
-            sh 'C:/Program Files/Git/usr/bin/bash.exe -c "docker system prune -f"'
+            sh 'docker system prune -f'
         }
         success {
             echo 'Pipeline completed successfully!'
